--- a/_config.yml
+++ b/_config.yml
@@ -26,6 +26,8 @@ baseurl: "/linguallia" # the subpath of your site, e.g. /blog
 url: "https://sinelaude.github.io" # the base hostname & protocol for your site, e.g. http://example.com
 domain: "sinelaude.github.io"
 
+permalink: /:categories/:year/:month/:title:output_ext
+
 minima:
   date_format: "%d.%m.%Y"
   skin: dark
